--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a class="btn" href="strains.html">Explore Strains</a>
           <a class="btn-secondary" href="404.html">Become a Dealer</a>
         </div>
-        <a class="btn-secondary get-high" href="#" onclick="toggleGetHighClass()">I JUST WANT TO GET HIGH!</a>
+        <a class="btn-terciary get-high" href="#" onclick="toggleGetHighClass()">I JUST WANT TO GET HIGH!</a>
       </div>
     </header>
     <!-- SubHero Text-->
@@ -279,7 +279,7 @@
         body.classList.toggle('change-color');
 
         if (body.classList.contains('change-color')) {
-          button.innerText = 'I WANT TO BE NORMAL AGAIN!';
+          button.innerText = 'I WANT TO BE NORMAL!';
         } else {
           button.innerText = 'I JUST WANT TO GET HIGH!';
         }
