--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="container">
         <div class="footer-upper">
           <div class="logo">
-            <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
+            <a href="index.html"><img src="/images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
             <h4>Navigation</h4>
