--- a/learn.html
+++ b/learn.html
@@ -24,10 +24,10 @@
           <a href="index.html"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
           <nav>
             <ul class="nav-menu">
-              <li><a href="index.html" class="nav-link active">Home</a></li>
+              <li><a href="index.html" class="nav-link">Home</a></li>
               <li><a href="about.html" class="nav-link">About Us</a></li>
               <li><a href="strains.html" class="nav-link">Strains</a></li>
-              <li><a href="learn.html" class="nav-link">Learn</a></li>
+              <li><a href="learn.html" class="nav-link active">Learn</a></li>
             </ul>
             <div class="hamburger">
               <span class="bar"></span>
@@ -52,9 +52,7 @@
     <!-- Learn Section-->
     <div class="learn-section">
       <div class="container">
-        <div class="learn-section-text">
-          <h2 class="learn-header">Strains Database</h2>
-        </div>
+        <h2 class="learn-header">Articles</h2>
         <!-- Article Card 1-->
         <div class="article-grid">
           <article class="article-container">
