--- a/strains.html
+++ b/strains.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
     <title>BudBuddie | Elevate Your Cannabis Experience</title>
   </head>
   <body>
