--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
     <header class="hero-about">
       <div class="container">
         <div class="navbar">
-          <a href="index.html"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
+          <div class="hero-logo-container">
+            <a href="index.html"><img src="images/logo.svg" alt="BudBuddie Logo" class="logo" /></a>
+          </div>
           <nav>
             <ul class="nav-menu">
               <li><a href="index.html" class="nav-link">Home</a></li>
