--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <footer>
       <div class="container">
         <div class="footer-upper">
-          <div class="logo">
+          <div class="logo-footer">
             <a href="index.html"><img src="/images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
