--- a/learn.html
+++ b/learn.html
@@ -111,8 +111,8 @@
               </div>
               <h3>How to roll a perfect joint</h3>
               <p>
-                Cannabis, with a rich history spanning millennia, has been cultivated and used by diverse cultures for medicinal, recreational, and
-                spiritual purposes.
+                To roll a perfect joint, start with finely ground cannabis. Use quality rolling papers, distribute the herb, and roll. Seal the joint,
+                shape the tip, and enjoy.
               </p>
               <a class="btn-article" href="learn.html">learn more</a>
             </div>
@@ -128,7 +128,7 @@
               </div>
               <h3>Edibles 101</h3>
               <p>
-                Ensuring optimal flavor and potency, properly curing and storing cannabis involves a delicate balance of humidity and temperature.
+                Infuse into butter or oil. Measure doses carefully. Incorporate into recipes. Start low and slow. Patience is key. Enjoy responsibly.
               </p>
               <a class="btn-article" href="learn.html">learn more</a>
             </div>
@@ -141,7 +141,7 @@
     <footer>
       <div class="container">
         <div class="footer-upper">
-          <div class="logo">
+          <div class="logo-footer">
             <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
           </div>
           <div class="footer-nav">
