--- a/404.html
+++ b/404.html
@@ -19,7 +19,19 @@
   </head>
   <body>
     <div class="fof">
-      <div class="container"></div>
+      <div class="container fof-container">
+        <div class="fof-logo">
+          <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
+        </div>
+        <h1 class="fof-header">404</h1>
+        <p class="fof-text">
+          Whoa! You've ventured into the cosmic fields of BudBuddie, but it seems the strain you're looking for is out of stock on this page. In the
+          meantime, spark up the homepage and explore our diverse strains. <br /><br /><span class="bold-text">Happy bud-hunting!</span>
+        </p>
+        <div class="fof-button">
+          <a class="btn" href="index.html">spark up</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
