--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
         <div class="fof-logo">
           <a href="index.html"><img src="./images/logo.svg" alt="BudBuddie Logo" /></a>
         </div>
-        <h1 class="fof-header">404</h1>
+        <h1 class="fof-header">404 error</h1>
         <p class="fof-text">
           Whoa! You've ventured into the cosmic fields of BudBuddie, but it seems the strain you're looking for is out of stock on this page. In the
           meantime, spark up the homepage and explore our diverse strains. <br /><br /><span class="bold-text">Happy bud-hunting!</span>
