--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
               <li><a href="about.html" class="nav-link">About Us</a></li>
               <li><a href="strains.html" class="nav-link">Strains</a></li>
               <li><a href="learn.html" class="nav-link">Learn</a></li>
+              <div class="nav-menu-socials">
+                <li>
+                  <a href="https://www.facebook.com/p/BudBuddie/">
+                    <i class="fa-brands fa-facebook fa-2xl" style="color: #fff"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/budbuddie/">
+                    <i class="fa-brands fa-instagram fa-2xl" style="color: #fff"></i>
+                  </a>
+                </li>
+              </div>
             </ul>
             <div class="hamburger">
               <span class="bar"></span>
